syntax = "proto3";

package io.products.channelProduct.domain;

option java_outer_classname = "ChannelProductDomain";

message ChannelProductState {
    string id = 1;
    string productId = 2;
    string channelId = 3;
    repeated ChannelProductAttribute channelProductAttribute = 4;
    repeated ChannelProductVariantGroup channelProductVariantGroup = 5;
    repeated ChannelProductOptionGroup channelProductOptionGroup = 6;
    bool isDeleted = 7;
}
    

message ChannelProductCreated {
    ChannelProductState channelProduct = 1;
}

message ChannelProductDeleted {
    ChannelProductState channelProduct = 1;
}


message ChannelProductAttribute {
    string attrId = 1;
    string chnlAttrName = 2;
    string chnlAttrType = 3;
    string value = 4;
    bool isCommon = 5;
}
  

message ChannelProductVariantGroup {
    repeated ChannelProductVariant channelProductVariant = 1;
}
 

message ChannelProductVariant {
    string vrntId = 1;
    string chnlVrntName = 2;
    string chnlVrntType = 3;    
    string value = 4;
}

 
message ChannelProductOptionGroup {
    repeated ChannelProductOption channelProductOption = 1;
}

message ChannelProductOption {
    string optnId = 1;
    string chnlOptnName = 2;
    string chnlOptnType = 3;    
    string value = 4;
}

